--- a/src/styles/Table.module.css
+++ b/src/styles/Table.module.css
@@ -1,5 +1,5 @@
 table.blueTable {
-    border: 1px solid #1C6EA4;
+    border: 1px solid #001f5b;
     background-color: #FFFFFF;
     width: 100%;
     height: 200px;
@@ -17,7 +17,7 @@ table.blueTable {
     background: #ececec;
   }
   table.blueTable thead {
-    background: #0517A4;
+    background: #002a7d;
     border-bottom: 2px solid #444444;
   }
   table.blueTable thead th {
