--- a/src/styles/Table.module.css
+++ b/src/styles/Table.module.css
@@ -1,45 +1,101 @@
-table.blueTable {
-    border: 1px solid #001f5b;
-    background-color: #FFFFFF;
-    width: 100%;
-    height: 200px;
-    text-align: left;
-    border-collapse: collapse;
-  }
-  table.blueTable td, table.blueTable th {
-    border: 1px solid #AAAAAA;
-    padding: 3px 2px;
-  }
-  table.blueTable tbody td {
-    font-size: 13px;
-  }
-  table.blueTable tr:nth-child(even) {
-    background: #ececec;
-  }
-  table.blueTable thead {
-    background: #002a7d;
-    border-bottom: 2px solid #444444;
-  }
-  table.blueTable thead th {
-    font-size: 15px;
-    font-weight: bold;
-    color: #FFFFFF;
-    border-left: 2px solid #D0E4F5;
-  }
-  table.blueTable thead th:first-child {
-    border-left: none;
-  }
-  
-  table.blueTable tfoot td {
-    font-size: 14px;
-  }
-  table.blueTable tfoot .links {
-    text-align: right;
-  }
-  table.blueTable tfoot .links a{
-    display: inline-block;
-    background: #1C6EA4;
-    color: #FFFFFF;
-    padding: 2px 8px;
-    border-radius: 5px;
-  }
+.table {
+  border: 1px solid #001f5b;
+  background-color: #ffffff;
+  width: 100%;
+  text-align: left;
+  border-collapse: collapse;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 1rem;
+}
+
+.table_cell,
+.table_header {
+  border: 1px solid #aaaaaa;
+  padding: 10px;
+}
+
+.table_cell {
+  font-size: 14px;
+  color: #333333;
+}
+
+.table_row:nth-child(even) {
+  background: #f9f9f9;
+}
+
+.table_header_row {
+  background: #002a7d;
+  border-bottom: 2px solid #444444;
+}
+
+.table_header {
+  font-size: 16px;
+  font-weight: bold;
+  color: #ffffff;
+  border-left: 2px solid #d0e4f5;
+}
+
+.table_header:first-child {
+  border-left: none;
+}
+
+.loading {
+  font-size: 16px;
+  color: #555555;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.error {
+  font-size: 16px;
+  color: red;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem;
+  padding-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+.form_input {
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+}
+
+.form__button_group {
+  grid-column: span 2;
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-start;
+}
+
+.form_button {
+  padding: 10px 15px;
+  font-size: 14px;
+  color: #ffffff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form_button_cancel {
+  background-color: #dc3545;
+}
+
+.form_button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.no_matches {
+  text-align: center;
+  font-size: 14px;
+  color: #666666;
+}
